// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configureStore component A, with reducer and saga 1`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
}
`;

exports[`configureStore component A, with reducer and saga 2`] = `null`;

exports[`configureStore component A, with reducer and saga 3`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
}
`;

exports[`configureStore component B, with reducer and saga 1`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
}
`;

exports[`configureStore component B, with reducer and saga 2`] = `null`;

exports[`configureStore component B, with reducer and saga 3`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
}
`;

exports[`configureStore component C, with reducer and using thunk 1`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
}
`;

exports[`configureStore component C, with reducer and using thunk 2`] = `null`;

exports[`configureStore component C, with reducer and using thunk 3`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
  "A/testReducer": "Name A",
  "B/testReducer": "Name B",
  "C/testReducer": "Name C",
}
`;

exports[`configureStore default store 1`] = `
Immutable.Map {
  "config": true,
  "route": Immutable.Map {
    "location": null,
  },
}
`;
